# mabi-look-matcher

./: .env.example  .gitignore  CONTEXT.md  README.md  TODO.md  pyproject.toml
apps/api/: .env.example  main.py
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: HomeClient.tsx
config/: README.md  catalog.merge.yaml  default.yaml  mocks.yaml
data/: catalog.snapshot.json
docs/: ISSUE-ready-for-agent.md  PRD-look-matcher.md
docs/adr/: 0001-custom-shell-over-sigkill-embed.md  0002-hybrid-image-matching.md  0003-all-sigkill-slots-in-v1.md  0004-catalog-sources-labanyu-sigkill-community.md  0005-server-selectable-catalog.md  0006-dual-simulator-view.md  0007-queued-analysis-with-dye-hint.md  0008-look-preset-local-and-share-url.md  0009-equip-click-then-drag.md  0010-ephemeral-reference-image.md  0011-vision-via-gemini-api-not-subscriptions.md  0012-embedding-rank-phase-two-local-clip.md  0013-stack-nextjs-fastapi-worker.md
docs/issues/: 001-look-preset-codec.md  002-loadout-state-click-equip.md  003-catalog-merge-cli.md  004-catalog-store-search.md  005-candidate-builder.md  006-analysis-api-mock-run.md  007-nextjs-custom-shell.md  008-flat-preview.md  009-depth-preview-beta.md  010-embedding-rank-clip.md  011-drag-equip.md  README.md
tests/: conftest.py  test_analysis_api.py  test_candidate_builder.py  test_catalog_merge.py  test_catalog_store.py  test_config_mock_mode.py  test_embedding_rank.py  test_flat_preview.py  test_loadout_state.py  test_look_preset_codec.py
(+8 files in other folders)
