[project]
name = "look-matcher"
version = "0.1.0"
description = "Mabi Look Matcher — reference image to equipment candidates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "redis>=5.0",
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
asyncio_mode = "auto"
markers = [
  "integration: hits real external services (disabled when mock mode)",
]

[project.scripts]
look-matcher-catalog-merge = "look_matcher.cli.catalog_merge:main"

[tool.setuptools.packages.find]
where = ["packages"]
